--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Câmara Aberta</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Bassa+Vah:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap');
+    </style>
   </head>
   <body>
     <div id="root"></div>
