--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="min-height: 100vh;display: flex;flex-direction: column;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
