--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root" style="min-height: 100vh;display: flex;flex-direction: column;"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/client/main.jsx"></script>
   </body>
 </html>
